adding some JS to the example browser app

--- a/programming_languages/javascript/browser/example_website/index.html
+++ b/programming_languages/javascript/browser/example_website/index.html
@@ -24,14 +24,14 @@
 	
 		<!-- Begin Hello World -->
 		<div id="main">
-			<h1 id="title">Hello World</h1>
+			<h1 id="header"><span id="title">Hello World</span></h1>
 			<p id="description">Bacon ipsum dolor sit amet tongue jerky kielbasa, t-bone pancetta bresaola pig. Ham hock turkey hamburger pork andouille, frankfurter short ribs drumstick strip steak ball tip boudin meatball. Fatback ham pork belly, turducken shank brisket meatball short loin ground round leberkas ham hock pancetta capicola biltong ribeye. Pig meatloaf pork, flank shoulder ribeye biltong frankfurter cow swine pork loin fatback venison chicken beef. Meatloaf ham hock beef ribs, leberkas tri-tip meatball pastrami strip steak shankle andouille chuck.</p>
 		</div>
 		<!-- End Hello World -->
 
 
         <!-- Begin Scripts -->
-        <script type="text/javascript" language="javascript" src="./scripts/script.js"/>
+        <script type="text/javascript" language="javascript" src="./scripts/script.js"></script>
         <!-- End Scripts -->
 
     </body>
